--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
   <body>
     <div id="container">
       <div id="map"></div>
+
       <div id="sidebar">
       <div>
-        <b>Sale de :</b> <option id="start" value="Isidro Fabela, 52004 Lerma de Villada, Méx.">RALCA</option>
-        <br />
+        <b>Sale de :</b> 
+        <option id="start" value="Isidro Fabela, 52004 Lerma de Villada, Méx.">RALCA</option>
         <b>Regresa a:</b>
       <option  id="end" value="Isidro Fabela, 52004 Lerma de Villada, Méx">RALCA</option>
       <br /> 
